[AV2-525] fixed found spacing issue

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -110,6 +110,7 @@ ion-item.no-bg {
       ion-card {
         max-width: 280px !important;
         margin-right: 15px;
+        margin-top: 6px;
       }
     }
     .switch-card-container {
@@ -117,6 +118,7 @@ ion-item.no-bg {
       ion-card {
         max-width: 210px !important;
         margin-left: 15px;
+        margin-top: 6px;
       }
     }
   }
